# dreamwright

./: .gitignore  CLAUDE.md  FUNCTIONAL_TEST_PLAN.md  README.md  TEST_PLAN.md  openapi.yaml  pyproject.toml  swagger_server.py  test_panel_gen.py  viewer.py
.github/workflows/: deploy-showcase.yml
apps/api/: pyproject.toml
apps/api/src/dreamwright_api/: __init__.py  app.py  deps.py  schemas.py
apps/api/src/dreamwright_api/routes/: __init__.py  assets.py  characters.py  images.py  jobs.py  locations.py  projects.py  scripts.py  story.py
apps/cli/: pyproject.toml
apps/cli/src/dreamwright_cli/: __init__.py  cli.py
apps/showcase/: package-lock.json  package.json  wrangler.toml
apps/showcase/functions/api/: webtoons.js
apps/showcase/functions/api/chapter/: [[path]].js
apps/showcase/functions/api/image/: [[path]].js
apps/showcase/functions/api/webtoon/: [id].js
apps/showcase/public/: app.js  index.html  styles.css
apps/showcase/scripts/: .env.example  README.md  upload_projects.py
apps/viewer/: pyproject.toml
apps/viewer/src/dreamwright_viewer/: __init__.py  viewer.py
docs/: chapter-generation-context.md  panel-image-context.md
projects/cyber-samurai/: project.json  webtoon.json
projects/cyber-samurai/assets/characters/director-kuro/: portrait.json  sheet.json
projects/cyber-samurai/assets/characters/kenji/: portrait.json  sheet.json
projects/cyber-samurai/assets/characters/riko/: portrait.json  sheet.json
projects/cyber-samurai/assets/locations/rikos-safehouse/: reference.json
projects/cyber-samurai/assets/locations/sector-4-slums-the-dregs/: reference.json
projects/cyber-samurai/assets/locations/the-celestial-spire-rooftop/: reference.json
projects/dragon-mishap/: project.json  webtoon.json
projects/dragon-mishap/assets/characters/ember-formerly-ignis/: portrait.json  sheet.json
projects/dragon-mishap/assets/characters/lily/: portrait.json  sheet.json
projects/dragon-mishap/assets/characters/marcus/: portrait.json  sheet.json
projects/dragon-mishap/assets/characters/moss/: portrait.json  sheet.json
projects/faimly-chens-adventure/: project.json
projects/ghost-detective/: project.json  webtoon.json
projects/hao-adventure/: project.json  webtoon.json
projects/hao-adventure/assets/characters/hao/: portrait.json  (+1 more)
projects/hao-japan-adventure/: project.json  webtoon.json
projects/hao-japan-trip/: project.json  webtoon.json
projects/magic-school/: project.json  webtoon.json
projects/midnight-delivery/: project.json  webtoon.json
projects/robot-chef/: project.json  webtoon.json
projects/the-ghost-of-444-pm/: project.json  webtoon.json
projects/the-last-hunter/: project.json  webtoon.json
scripts/: validate_openapi.py
(+576 files in other folders)
