[project]
name = "dreamwright-api"
version = "0.1.0"
description = "FastAPI backend for DreamWright"
requires-python = ">=3.11"
dependencies = [
    "dreamwright-services",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
dreamwright-api = "dreamwright_api.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamwright_api"]
