[project]
name = "dreamwright-cli"
version = "0.1.0"
description = "Command-line interface for DreamWright"
requires-python = ">=3.11"
dependencies = [
    "dreamwright-services",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "nest-asyncio>=1.5.0",
]

[project.scripts]
dreamwright = "dreamwright_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamwright_cli"]
